--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=5"
   },
   "scripts": {
+    "postinstall": "cd lighthouse-core && npm install && npm run build",
     "lint": "[ \"$CI\" = true ] && eslint --quiet -f codeframe . || eslint .",
     "smoke": "lighthouse-cli/test/smokehouse/offline-local/run-tests.sh && lighthouse-cli/test/smokehouse/dobetterweb/run-tests.sh",
     "coverage": "node $__node_harmony $(npm bin)/istanbul cover -x \"**/third_party/**\" _mocha -- $(find */test -name '*-test.js') --timeout 10000 --reporter progress",
