Build core before running tests

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coverage": "node $__node_harmony $(npm bin)/istanbul cover -x \"**/third_party/**\" _mocha -- $(find */test -name '*-test.js') --timeout 10000 --reporter progress",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "start": "node ./lighthouse-cli/index.js",
-    "test": "npm run lint --silent && npm run unit",
+    "test": "npm run lint --silent && npm run build-core && npm run unit",
+    "build-core": "cd lighthouse-core && npm run build",
     "cli-unit": "lighthouse-core/scripts/run-mocha.sh --cli",
     "unit": "lighthouse-core/scripts/run-mocha.sh --default",
     "closure": "cd lighthouse-core && closure/closure-type-checking.js",
