--- a/lighthouse-viewer/package.json
+++ b/lighthouse-viewer/package.json
@@ -5,6 +5,7 @@
     "node": ">=5"
   },
   "scripts": {
+    "prepublish": "npm run build",
     "watch": "gulp watch",
     "build": "gulp build"
   },
